# genesis-backend-python

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
app/: main.py
src/: agent.py  constants.py  models.py
src/api/: main.py  models.py
src/chains/: __init__.py  evaluator.py  feedback.py  mutlimodal_rag.py  qp_generation.py  teacher.py
src/tools/: __init__.py  actions.py  evaluator.py  feedback.py  qp_generation.py  reasoning.py  teacher.py  teaching.py  whatsapp.py  wikipedia.py  wolfram_alpha.py
src/utils/: __init__.py
src/voice/: config.py  deepgram_handler.py  llm_processor.py  main.py  text_to_speech.py  websocket.py
subtopics/: 0_subtopics.json
