[tool.poetry]
name = "genesis-backend-python"
version = "0.1.0"
description = ""
authors = ["anandu-kv <anandu.s@keyvalue.systems>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
